fixed flexbox alignment

--- a/Uebung_1/css/app.css
+++ b/Uebung_1/css/app.css
@@ -107,12 +107,13 @@ img {
 
 
 .grid .col {
-    width: 100%;
+    width: 20%;
+    min-width: 236px;
     margin: 10px;
-flex: 1;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    padding: 0;
+    max-width: 20%;
+    flex: 1;
+
 }
 
 
